--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#45C5E4">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/main"
@@ -18,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Welcome"
-            android:textColor="#000000"
+            android:textColor="#673AB7"
             android:textSize="40sp"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
@@ -29,8 +28,8 @@
             android:id="@+id/hireMeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hire me"
-            android:textColor="#FFFFFF"
+            android:text="Hire Us"
+            android:textColor="#673AB7"
             android:textSize="30sp"
             android:textStyle="italic"
             android:layout_marginBottom="30dp"
@@ -59,7 +58,7 @@
                     android:text="Find a Job"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#673AB7"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true" />
 
@@ -94,7 +93,7 @@
                     android:text="Give a Job"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#673AB7"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true" />
 
