--- a/app/src/main/res/layout/activity_find_job.xml
+++ b/app/src/main/res/layout/activity_find_job.xml
@@ -16,7 +16,7 @@
             android:id="@+id/appTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Job Maker"
+            android:text="Welcome Hire US"
             android:textSize="28sp"
             android:textStyle="bold"
             android:textColor="#000000"
