--- a/app/src/main/res/layout/activity_add_meal.xml
+++ b/app/src/main/res/layout/activity_add_meal.xml
@@ -16,7 +16,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@android:drawable/ic_media_previous"
+            android:src="@drawable/outline_arrow_back_24"
             android:contentDescription="Back"
             android:tint="#000000"
             android:layout_marginBottom="16dp"/>
