--- a/app/src/main/res/layout/activity_applicant_details.xml
+++ b/app/src/main/res/layout/activity_applicant_details.xml
@@ -56,10 +56,10 @@
                     android:gravity="center_vertical">
 
                     <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:tint="?attr/colorPrimary"
-                        app:srcCompat="@drawable/ic_email_24" />
+                        app:srcCompat="@drawable/outline_mail_24" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -99,8 +99,8 @@
                     android:gravity="center_vertical">
 
                     <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:tint="?attr/colorPrimary"
                         app:srcCompat="@drawable/ic_call_24" />
 
@@ -142,8 +142,8 @@
                     android:gravity="center_vertical">
 
                     <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:tint="?attr/colorPrimary"
                         app:srcCompat="@drawable/ic_location_24" />
 
@@ -185,8 +185,8 @@
                     android:gravity="center_vertical">
 
                     <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:tint="?attr/colorPrimary"
                         app:srcCompat="@drawable/ic_work_24" />
 
@@ -228,8 +228,8 @@
                     android:gravity="center_vertical">
 
                     <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:tint="?attr/colorPrimary"
                         app:srcCompat="@drawable/ic_bank_24" />
 
@@ -329,13 +329,17 @@
                     android:layout_height="1dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="8dp" />
-
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
                 <TextView
                     android:id="@+id/txtDetailReviews"
                     android:text="Review details will appear here."
                     android:textColor="#555"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+                </LinearLayout>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
